--- a/client/index.html
+++ b/client/index.html
@@ -21,14 +21,17 @@
 
 		<!-- Number of bedrooms -->
 		<div class="col-md-12 inputForm">
-		    <input type="text" class="form-control  " ng-model="main.address" placeholder="Enter the number of bedrooms" required/>
+		    <input type="text" class="form-control  " ng-model="main.bedrooms" placeholder="Enter the number of bedrooms" required/>
 		</div>
 
 		<!-- Number of bathrooms -->
 		<div class="col-md-12 inputForm">
-		    <input type="text" class="form-control  " ng-model="main.address" placeholder="Enter the number of bathrooms" required/>
+		    <input type="text" class="form-control  " ng-model="main.bathrooms" placeholder="Enter the number of bathrooms" required/>
 		</div>
-
+		
+		<div class="col-md-12 inputForm">
+			<button class="btn btn-success pull-right" type="submit">Submit</button>
+		</div>
 
 	  </form>
   </div>
