--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,19 @@
   <title>MKS20 Site Deploy</title>
 </head>
 <body>
+
+<link rel="stylesheet" href="./assets/css/app.css">
+<link rel="stylesheet" href="./assets/css/foundation-icons.css">
+<!-- <link rel="stylesheet" href="assets/scss/foundation-icons.css">
+ -->
+
   <h1>Hello, World!</h1>
+
+<!-- start of sample for font icons-->
+<i class="fi-address-book"></i>
+<!-- end of sample for font icons-->
+
+
 </body>
 </html>
 
