adding files to dev branch to create a new branch

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,8 @@
     <title>Movein Assistant</title>
     <link href="assets/css/app.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./assets/css/foundation-icons.css">
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/routes.js"></script>
-    <script src="assets/js/angular.js"></script>
+    <script src="app/app.js"></script>
+    <script src="lib/angular/angular.js"></script>
   </head>
 
   <body>
