--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./assets/css/foundation-icons.css">
     <script src="lib/angular/angular.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/mainCtrl.js"></script>
   </head>
 
-  <body>
+  <body ng-controller="MainController as main">
     <div class="grid-block shrink wrap search-header"> <!-- start search header -->
       <div class="grid-content menu-bar dark align-left small-12 medium-5 search-header-left">
           <img src="../assets/images/app-icon.png" alt="logo">
@@ -19,7 +20,7 @@
 
       <div class="grid-content collapse menu-bar dark search-header-right small-12 medium-7">
         <div class="grid-content small-9 medium-10 search-header-right">
-          <span class="inline-label">
+          <span class="inline-label" ng-submit="main.dothis()">
             <input type="search" placeholder="Enter an address">
             <div class="button">
               <a href="#">Search</a>
