[Refactor] Handle errors from zilpy.

--- a/client/index.html
+++ b/client/index.html
@@ -32,13 +32,14 @@
       <div class="grid-content collapse menu-bar dark search-header-right small-12 medium-7">
         <div class="grid-content small-9 medium-10 search-header-right">
 
-          <form class="inline-label" ng-submit="main.submitAddress()">
-            <input type="search" id="place-search" placeholder="Enter an address">
+          <div class="inline-label">
+            <input type="search" ng-model="main.address" id="place-search" placeholder="Enter an address">
 
-            <div class="button" type="submit">
+            <button class="button" ng-click="main.submitAddress()">Submit</button>
+            <!-- <div class="button" type="submit">
               <a href="#">Search</a>
-            </div>
-          </form>
+            </div> -->
+          </div>
 
         </div>
         <div class="grid-content small-2 medium-2 search-header-signup">
@@ -154,6 +155,9 @@
             </div> <!-- end filter section -->
 
             <hr>
+
+            <!-- Remove -->
+            <pre>{{main.address}}</pre>
 
             <div class="grid-block small-11 small-up-1 medium-12 medium-up-3 align-center shrink"> <!-- start glance-card-results section -->
               <!---single glance card start-->
