--- a/client/index.html
+++ b/client/index.html
@@ -32,14 +32,24 @@
       <div class="grid-content collapse menu-bar dark search-header-right small-12 medium-7">
         <div class="grid-content small-9 medium-10 search-header-right">
 
-          <div class="inline-label">
+          <form class="inline-label" ng-submit="main.submitAddress()">
+            <input type="search" id="place-search" placeholder="Enter an address" ng-model='main.searchInfo.address'>
+
+            <div>
+              <button class="button" type="submit">
+                Search
+              </button>
+            </div>
+          </div>
+
+<!-- <div class="inline-label">
             <input type="search" ng-model="main.address" id="place-search" placeholder="Enter an address">
 
             <button class="button" ng-click="main.submitAddress()">Submit</button>
             <!-- <div class="button" type="submit">
               <a href="#">Search</a>
             </div> -->
-          </div>
+          </div> -->
 
         </div>
         <div class="grid-content small-2 medium-2 search-header-signup">
@@ -63,44 +73,46 @@
               <div class="grid-content medium-2">
                 <label>Type of Place:</label>
               </div>
+              <!--start of rent/buy section -->
               <div class="grid-content medium-3">
-                <ul class="button-group segmented">
-                  <li>
-                    <input type="radio" name="housing-rent" value="rent" id="rent" checked="">
-                    <label for="housing-rent">Rent</label>
+                <ul class="button-group segmented"> <!-- class="button-group segmented" -->
+                  <li ng-click="main.setValueRent()">
+                    <input type="radio" name="rentBuy" value="rent" ng-model="main.searchInfo.buyOrRent">
+                    <label for="rentBuy">Rent</label>
                   </li>
-                  <li>
-                    <input type="radio" name="housing-buy" value="buy" id="buy">
-                    <label for="housing-buy">Buy</label>
+                  <li ng-click="main.setValueBuy()">
+                    <input type="radio" name="rentBuy" value="buy" ng-model="main.searchInfo.buyOrRent" checked="">
+                    <label for="rentBuy">Buy</label>
                   </li>
                 </ul>
               </div>
+              <!--end of rent/buy section -->
               <div class="grid-content medium-1">
                 <label>Bed:</label>
               </div>
               <div class="grid-content medium-2">
-                <select name="" id="">
-                  <option value="">1 bed</option>
-                  <option value="">2 bed</option>
-                  <option value="">3 bed</option>
-                  <option value="">4 bed</option>
-                  <option value="">5 bed</option>
-                  <option value="">6 bed</option>
-                  <option value="">7+ bed</option>
+                <select name="bedrooms" ng-model="main.searchInfo.bedrooms">
+                  <option value="1">1 bed</option>
+                  <option value="2">2 bed</option>
+                  <option value="3">3 bed</option>
+                  <option value="4">4 bed</option>
+                  <option value="5">5 bed</option>
+                  <option value="6">6 bed</option>
+                  <option value="7">7+ bed</option>
                 </select>
               </div>
               <div class="grid-content medium-1">
                 <label>Bath:</label>
               </div>
-              <div class="grid-content medium-2">
-                <select name="" id="">
-                  <option value="">1 bath</option>
-                  <option value="">2 bath</option>
-                  <option value="">3 bath</option>
-                  <option value="">4 bath</option>
-                  <option value="">5 bath</option>
-                  <option value="">6 bath</option>
-                  <option value="">7+ bath</option>
+              <div class="grid-content medium-3">
+                <select name="bathrooms" ng-model="main.searchInfo.bathrooms">
+                  <option value="1">1 bath</option>
+                  <option value="2">2 bath</option>
+                  <option value="3">3 bath</option>
+                  <option value="4">4 bath</option>
+                  <option value="5">5 bath</option>
+                  <option value="6">6 bath</option>
+                  <option value="7">7+ bath</option>
                 </select>
               </div>
             </div>
@@ -108,49 +120,61 @@
               <div class="grid-content medium-2">
                 <label>Max Monthly Price:</label>
               </div>
-              <div class="grid-content medium-9">
-                <input type="range" name="rentRange" min="400" max="1000">
+              <div class="grid-content medium-9">${{main.searchInfo.maxRent}}
+                <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="main.searchInfo.maxRent">
               </div>
             </div>
             <div class="grid-block small-12 medium-12 filter-row">
               <div class="grid-content medium-2">
                 <label>Max Time:</label>
               </div>
-              <div class="grid-content medium-2">
-                <select name="" id="">
-                  <option value="">15 min</option>
-                  <option value="">30 min</option>
-                  <option value="">45 min</option>
-                  <option value="">1 hr</option>
-                  <option value="">1 hr 15 min</option>
-                  <option value="">1 hr 30 min</option>
-                  <option value="">1 hr 45 min</option>
-                  <option value="">2 hr</option>
-                  <option value="">2 hr 15 min</option>
-                  <option value="">2 hr 30 min</option>
+              <div class="grid-content medium-3">
+                <select name="commuteTime" ng-model="main.searchInfo.commuteTime">
+                  <option value="15">15 min</option>
+                  <option value="30">30 min</option>
+                  <option value="45">45 min</option>
+                  <option value="60">1 hr</option>
+                  <option value="75">1 hr 15 min</option>
+                  <option value="90">1 hr 30 min</option>
+                  <option value="105">1 hr 45 min</option>
+                  <option value="120">2 hr</option>
+                  <option value="135">2 hr 15 min</option>
+                  <option value="150">2 hr 30 min</option>
                 </select>
               </div>
               <div class="grid-content medium-2">
                   <label>Max Distance:</label>
               </div>
                 <div class="grid-content medium-3">
-                  <select name="" id="">
-                    <option value="">5 miles</option>
-                    <option value="">10 miles</option>
-                    <option value="">15 miles</option>
-                    <option value="">20 miles</option>
-                    <option value="">25 miles</option>
-                    <option value="">30 miles</option>
-                    <option value="">35 miles</option>
-                    <option value="">40 miles</option>
-                    <option value="">45 miles</option>
-                    <option value="">50 miles</option>
-                    <option value="">55 miles</option>
-                    <option value="">60 miles</option>
-                    <option value="">65 miles</option>
-                    <option value="">70 miles</option>
+                  <select name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
+                    <option value="5">5 miles</option>
+                    <option value="10">10 miles</option>
+                    <option value="15">15 miles</option>
+                    <option value="20">20 miles</option>
+                    <option value="25">25 miles</option>
+                    <option value="30">30 miles</option>
+                    <option value="35">35 miles</option>
+                    <option value="40">40 miles</option>
+                    <option value="45">45 miles</option>
+                    <option value="50">50 miles</option>
+                    <option value="55">55 miles</option>
+                    <option value="60">60 miles</option>
+                    <option value="65">65 miles</option>
+                    <option value="70">70 miles</option>
                   </select>
                 </div>
+              </div>
+
+              <div class="grid-content medium-5 align-right">
+                <label>Order Results By:</label>
+                <select name="selectOrder" ng-model="main.filter">
+                  <option value="estimateLow">Lowest Rent</option>
+                  <option value="-estimateLow">Highest Rent</option>
+                  <option value="commuteTime">Shortest Commute</option>
+                  <option value="-commuteTime">Longest Commute</option>
+                  <option value="commuteDistance">Closest Distance</option>
+                  <option value="-commuteDistance">Furthest Distance</option>
+                </select>
               </div>
             </div> <!-- end filter section -->
 
@@ -161,7 +185,7 @@
 
             <div class="grid-block small-11 small-up-1 medium-12 medium-up-3 align-center shrink"> <!-- start glance-card-results section -->
               <!---single glance card start-->
-              <div class="grid-block shrink" ng-repeat="neighborhood in main.neighborhoodsObj">
+              <div class="grid-block shrink" ng-repeat="neighborhood in main.neighborhoodArray | orderBy:main.filter">
                 <div class="card glance-card">
                   <div class="card-divider glance-background">
                       {{neighborhood.name}}
@@ -169,12 +193,12 @@
                   <div class="grid-block glance-content">
                     <div class="grid-content">
                       <h4>Rent</h4>
-                      <p class="rent">${{neighborhood.rentEstimate.estimateLow || N/A }}-${{neighborhood.rentEstimate.estimateHigh || N/A }}</p>
+                      <p class="rent">${{neighborhood.estimateLow || N/A }}-${{neighborhood.estimateHigh || N/A }}</p>
                       <small class="zilpy">Powered by Zilpy</small>
                     </div>
                     <div class="grid-content">
                       <h4>Commute</h4>
-                      <p>{{neighborhood.commuteInfo.commuteDistance}} miles | {{neighborhood.commuteInfo.commuteTime}} min</p>
+                      <p>{{neighborhood.commuteDistance}} miles | {{neighborhood.commuteTime}} min</p>
                     </div>
                   </div>
                </div>
