--- a/client/index.html
+++ b/client/index.html
@@ -32,24 +32,13 @@
       <div class="grid-content collapse menu-bar dark search-header-right small-12 medium-7">
         <div class="grid-content small-9 medium-10 search-header-right">
 
-          <form class="inline-label" ng-submit="main.submitAddress()">
-            <input type="search" id="place-search" placeholder="Enter an address" ng-model='main.searchInfo.address'>
-
-            <div>
-              <button class="button" type="submit">
-                Search
-              </button>
-            </div>
-          </div>
-
-<!-- <div class="inline-label">
-            <input type="search" ng-model="main.address" id="place-search" placeholder="Enter an address">
+          <!-- Refactored to improve autocomplete -->
+          <div class="inline-label">
+            <input type="search" ng-model="main.searchInfo.address" id="place-search" placeholder="Enter an address">
+            <!-- changed from main.address to main.searchInfo.address -->
 
             <button class="button" ng-click="main.submitAddress()">Submit</button>
-            <!-- <div class="button" type="submit">
-              <a href="#">Search</a>
-            </div> -->
-          </div> -->
+          </div>
 
         </div>
         <div class="grid-content small-2 medium-2 search-header-signup">
