--- a/client/index.html
+++ b/client/index.html
@@ -11,35 +11,23 @@
 
   <body ng-controller="MainController as main">
 
-    <div class="grid-block shrink wrap search-header"> <!-- start search header -->
-      <div class="grid-content menu-bar dark align-left small-12 medium-5 search-header-left">
-          <img src="../assets/images/app-icon.png" alt="logo">
-          <h3>Move-in Assistant</h3>
-      </div>
+    <div> <!-- start search header -->
+      <img src="../assets/images/app-icon.png" alt="logo">
+      <h3>Move-in Assistant</h3>
+    </div>
 
-      <div class="grid-content collapse menu-bar dark search-header-right small-12 medium-7">
-        <div class="grid-content small-9 medium-10 search-header-right">
-
-          <!-- Refactored to improve autocomplete -->
-          <div class="inline-label">
-            <input type="search" ng-model="main.searchInfo.address" id="place-search" placeholder="Enter an address">
-            <!-- changed from main.address to main.searchInfo.address -->
-
-            <button class="button" ng-click="main.submitAddress()">Submit</button>
-          </div>
-
-        </div>
-        <div class="grid-content small-2 medium-2 search-header-signup">
-          <a href="#">Signup</a>
-        </div>
-      </div>
+    <!-- Refactored to improve autocomplete -->
+    <div>
+      <input type="search" ng-model="main.searchInfo.address" id="place-search" placeholder="Enter an address">
+      <!-- changed from main.address to main.searchInfo.address -->
+      <button class="button" ng-click="main.submitAddress()">Submit</button>
     </div>
 
     <div ui-view></div>
     <a ui-sref="main.results">Main results</a>
     <a ui-sref="main.details">Main details</a>
 
-    <div class="grid-block small-10 medium-12 footer"> <!-- start footer section -->
+    <div> <!-- start footer section -->
       <ul>
         <li>&copy; Move-in Assistant</li>
         <li>Raghav Abboy,</li>
@@ -48,10 +36,6 @@
         <li>and Kalisa Falzone</li>
       </ul>
     </div> <!-- end footer section -->
-
-        </div> <!-- end results section -->
-      </div> <!-- end map and results grid -->
-    </div> <!-- end search grid -->
 
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
